# adk-a2a-lab

./: README.md  pyproject.toml  requirements.txt
ADK/sentiment_agent/: agent.py
demo/: demo.webm
src/my_a2a/llm/: model.py
src/my_a2a/multi_a2a/agents/planner_agent/: agent.py  agent_executor.py  main.py
src/my_a2a/multi_a2a/agents/sentiment_agent/: agent.py
src/my_a2a/multi_a2a/client/nlp_client_agent/: client_session.py
src/my_a2a/multi_a2a/greeting_agent/: agent_executor.py  main.py
src/my_a2a/multi_a2a/planner_agent/: agent_executor.py  main.py
src/my_a2a/multi_a2a/pos_tag_agent/: agent.py  agent_executor.py  main.py
src/my_a2a/multi_a2a/sentiment_agent/: agent_executor.py
src/my_a2a/multi_a2a_1/client/nlp_client_agent/: agent.py  client_session.py
src/my_a2a/multi_a2a_1/greeting_agent/: agent.py  agent_executor.py  main.py
src/my_a2a/multi_a2a_1/planner_agent/: agent.py  agent_executor.py  main.py
src/my_a2a/multi_a2a_1/pos_tag_agent/: agent_executor.py  main.py
src/my_a2a/multi_a2a_1/sentiment_agent/: agent_executor.py  main.py
src/my_a2a/simple_a2a/: agent_executor.py  client.py  main.py
src/my_adk/: __init__.py
src/my_adk/Stateful Agent/expense_manager_agent/: agent.py
src/my_adk/llm/: __init__.py  model.py
src/my_adk/simple_agent/sentiment_agent/: agent.py
src/my_adk/stateful_agent/: session.py
src/my_adk/stateful_agent/expense_manager_agent/: __init__.py  agent.py
