[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adk_a2a_lab"
version = "0.1.0"
description = "ADK Agent-to-Agent Lab with sentiment analysis capabilities"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk",
    "google-adk",
    "ipykernel",
    "langchain",
    "litellm==1.75.3",
    "litellm[proxy]",
    "python-dotenv",
    "pytz",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/my_adk",
    "src/my_a2a",
]

[tool.hatch.build]
packages = [
    "src/my_adk",
    "src/my_a2a",
]

[tool.hatch.metadata]
allow-direct-references = true
